<resources>
    <string name="app_name">Gatos Api</string>
    <string name="inicio">Inicio</string>
    <string name="equipo">Equipo</string>
    <string name="galeria">Galería</string>
    <string name="contacto">Contacto</string>
    <string name="gatos">Todos los gatos</string>
    <string name="votos">Votos</string>
    <string name="favoritos">Favoritos</string>
    <string name="por_nombre">Por nombre</string>
    <string name="por_pais">Por pais</string>
    <string name="por_exp_vida">Por exp. vida</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>